Chapter 9: 実ファイルに合わせて修正、variables.tf説明を省略化

--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -49,7 +49,7 @@ management_resource_settings = {
 ```
 
 
-**すべて`$${変数名}`形式**なのが特徴。これは**変数置換システム**だよ。
+すべて`$${変数名}`形式なのが特徴。これは変数置換システムだよ。
 
 ### 変数置換システムの仕組み
 
@@ -97,17 +97,13 @@ locals.tf
 ```hcl title="platform-landing-zone.auto.tfvars（抜粋）"
 custom_replacements = {
   names = {
-    # Management resources
-    ama_user_assigned_managed_identity_name = "id-ama-$${starter_location_01}"
-    dcr_change_tracking_name                = "dcr-change-tracking-$${starter_location_01}"
-    dcr_defender_sql_name                   = "dcr-defender-sql-$${starter_location_01}"
-    dcr_vm_insights_name                    = "dcr-vm-insights-$${starter_location_01}"
+    # Resource names management
     log_analytics_workspace_name            = "law-management-$${starter_location_01}"
-    management_resource_group_name          = "rg-management-$${starter_location_01}"
-
-    # Locations
-    starter_location_01 = "japaneast"
-    starter_location_02 = "japanwest"
+    ddos_protection_plan_name               = "ddos-$${starter_location_01}"
+    ama_user_assigned_managed_identity_name = "uami-management-ama-$${starter_location_01}"
+    dcr_change_tracking_name                = "dcr-change-tracking"
+    dcr_defender_sql_name                   = "dcr-defender-sql"
+    dcr_vm_insights_name                    = "dcr-vm-insights"
     
     # ... その他の変数
   }
@@ -118,7 +114,6 @@ custom_replacements = {
 
 ここで実際の値を定義してる。例えば：
 
-- `starter_location_01 = "japaneast"`
 - `log_analytics_workspace_name = "law-management-japaneast"`（これも`$${starter_location_01}`を含む）
 
 **置換の多段階処理**：
@@ -142,7 +137,7 @@ config-templatingモジュールが全ての`$${...}`を再帰的に置換して
 
 次は、モジュール呼び出しを見ていこう。
 
-### main.management.tfの実際
+### main.management.tf
 
 main.management.tfを開いてみよう。
 
@@ -179,36 +174,20 @@ var.management_resources_enabled = false
 count = 0（モジュールスキップ）
 ```
 
-### modules/management_resources/main.tfの実際
+### modules/management_resources/main.tf
 
-modules/management_resources/main.tfを開いてみよう。
-
-```hcl title="modules/management_resources/main.tf（抜粋）"
+```hcl title="modules/management_resources/main.tf"
 module "management_resources" {
-  source  = "Azure/avm-ptn-alz-management/azurerm"
-  version = "0.9.0"
-
-  # Location (required)
-  location = var.management_resource_settings.location
-
-  # Resource names (optional, auto-generated if not specified)
-  automation_account_name      = null
-  log_analytics_workspace_name = coalesce(
-    var.management_resource_settings.log_analytics_workspace_name,
-    "law-management-${var.management_resource_settings.location}"
-  )
-  resource_group_name = coalesce(
-    var.management_resource_settings.resource_group_name,
-    "rg-management-${var.management_resource_settings.location}"
-  )
-
-  # Data Collection Rules
-  data_collection_rules = var.management_resource_settings.data_collection_rules
-
-  # User Assigned Managed Identities
-  user_assigned_managed_identities = var.management_resource_settings.user_assigned_managed_identities
-
-  # Log Analytics Workspace settings
+  source                                                     = "Azure/avm-ptn-alz-management/azurerm"
+  version                                                    = "0.9.0"
+  automation_account_name                                    = null
+  location                                                   = var.management_resource_settings.location
+  log_analytics_workspace_name                               = coalesce(var.management_resource_settings.log_analytics_workspace_name, "law-management-${var.management_resource_settings.location}")
+  resource_group_name                                        = coalesce(var.management_resource_settings.resource_group_name, "rg-management-${var.management_resource_settings.location}")
+  data_collection_rules                                      = var.management_resource_settings.data_collection_rules
+  enable_telemetry                                           = var.enable_telemetry
+  linked_automation_account_creation_enabled                 = false
+  log_analytics_solution_plans                               = var.management_resource_settings.log_analytics_solution_plans
   log_analytics_workspace_allow_resource_only_permissions    = var.management_resource_settings.log_analytics_workspace_allow_resource_only_permissions
   log_analytics_workspace_cmk_for_query_forced               = var.management_resource_settings.log_analytics_workspace_cmk_for_query_forced
   log_analytics_workspace_daily_quota_gb                     = var.management_resource_settings.log_analytics_workspace_daily_quota_gb
@@ -218,23 +197,11 @@ module "management_resources" {
   log_analytics_workspace_reservation_capacity_in_gb_per_day = var.management_resource_settings.log_analytics_workspace_reservation_capacity_in_gb_per_day
   log_analytics_workspace_retention_in_days                  = var.management_resource_settings.log_analytics_workspace_retention_in_days
   log_analytics_workspace_sku                                = var.management_resource_settings.log_analytics_workspace_sku
-
-  # Log Analytics Solution Plans
-  log_analytics_solution_plans = var.management_resource_settings.log_analytics_solution_plans
-
-  # Sentinel onboarding
-  sentinel_onboarding = var.management_resource_settings.sentinel_onboarding
-
-  # Resource creation flags
-  resource_group_creation_enabled            = true
-  linked_automation_account_creation_enabled = false
-
-  # Tags and telemetry
-  tags             = var.management_resource_settings.tags
-  enable_telemetry = var.enable_telemetry
-
-  # Timeouts
-  timeouts = var.management_resource_settings.timeouts
+  resource_group_creation_enabled                            = true
+  sentinel_onboarding                                        = var.management_resource_settings.sentinel_onboarding
+  tags                                                       = var.management_resource_settings.tags
+  timeouts                                                   = var.management_resource_settings.timeouts
+  user_assigned_managed_identities                           = var.management_resource_settings.user_assigned_managed_identities
 }
 ```
 
@@ -266,57 +233,40 @@ module "management_resources" {
    linked_automation_account_creation_enabled = false # Automation Accountは作らない
    ```
 
-### modules/management_resources/variables.tfの実際
+### modules/management_resources/variables.tf
 
-modules/management_resources/variables.tfを開いてみよう。
-
-```hcl title="modules/management_resources/variables.tf（抜粋）"
-variable "enable_telemetry" {
-  type        = bool
-  default     = true
-  description = <<DESCRIPTION
-This variable controls whether or not telemetry is enabled for the module.
-For more information see <https://aka.ms/avm/telemetryinfo>.
-If it is set to false, then no telemetry will be collected.
-DESCRIPTION
-}
-
+```hcl title="modules/management_resources/variables.tf (抜粋)"
 variable "management_resource_settings" {
   type = object({
-    enabled  = optional(bool, true)
-    location = string
-
     automation_account_name      = optional(string)
+    location                     = string
     log_analytics_workspace_name = optional(string)
     resource_group_name          = optional(string)
-
     data_collection_rules = optional(object({
-      change_tracking = optional(object({
+      change_tracking = object({
         enabled  = optional(bool, true)
         name     = string
         location = optional(string)
         tags     = optional(map(string))
-      }))
-      vm_insights = optional(object({
+      })
+      vm_insights = object({
         enabled  = optional(bool, true)
         name     = string
         location = optional(string)
         tags     = optional(map(string))
-      }))
-      defender_sql = optional(object({
+      })
+      defender_sql = object({
         enabled                                                = optional(bool, true)
         name                                                   = string
         location                                               = optional(string)
         tags                                                   = optional(map(string))
         enable_collection_of_sql_queries_for_security_research = optional(bool, false)
-      }))
+      })
     }))
-
     log_analytics_solution_plans = optional(list(object({
       product   = string
       publisher = optional(string)
     })))
-
     log_analytics_workspace_allow_resource_only_permissions    = optional(bool, true)
     log_analytics_workspace_cmk_for_query_forced               = optional(bool)
     log_analytics_workspace_daily_quota_gb                     = optional(number)
@@ -326,14 +276,11 @@ variable "management_resource_settings" {
     log_analytics_workspace_reservation_capacity_in_gb_per_day = optional(number)
     log_analytics_workspace_retention_in_days                  = optional(number)
     log_analytics_workspace_sku                                = optional(string)
-
     sentinel_onboarding = optional(object({
       name                         = optional(string)
       customer_managed_key_enabled = optional(bool)
     }))
-
     tags = optional(map(string))
-
     timeouts = optional(object({
       sentinel_onboarding = optional(object({
         create = optional(string)
@@ -347,98 +294,46 @@ variable "management_resource_settings" {
         update = optional(string)
         read   = optional(string)
       }))
-    }))
-
+    }), {})
     user_assigned_managed_identities = optional(object({
-      ama = optional(object({
+      ama = object({
         enabled  = optional(bool)
         name     = string
         location = optional(string)
         tags     = optional(map(string))
-      }))
+      })
     }))
   })
+  default     = null
+  description = "The settings for the management resources..."
+}
 
-  description = <<DESCRIPTION
-Configuration settings for the management resources.
-
-Required:
-- location: Azure region where management resources will be deployed
-
-Optional resource names (auto-generated if not specified):
-- automation_account_name: Automation Account name
-- log_analytics_workspace_name: Log Analytics Workspace name
-- resource_group_name: Resource Group name
-
-Data Collection Rules:
-- change_tracking: Track file/registry changes (default: enabled)
-- vm_insights: VM performance monitoring (default: enabled)
-- defender_sql: SQL Server security monitoring (default: enabled)
-
-Log Analytics Solution Plans:
-- List of solutions to install (e.g., ContainerInsights, VMInsights)
-
-Log Analytics Workspace settings:
-- allow_resource_only_permissions: Enable resource-only permissions (default: true)
-- cmk_for_query_forced: Force customer-managed keys for queries
-- daily_quota_gb: Daily ingestion quota in GB
-- internet_ingestion_enabled: Enable internet ingestion (default: true)
-- internet_query_enabled: Enable internet queries (default: true)
-- local_authentication_enabled: Enable local authentication (default: true)
-- reservation_capacity_in_gb_per_day: Reservation capacity for CapacityReservation SKU
-- retention_in_days: Data retention period (default: 30 days)
-- sku: Pricing tier (default: PerGB2018)
-
-Sentinel Onboarding:
-- name: Sentinel onboarding name
-- customer_managed_key_enabled: Enable customer-managed keys
-
-Timeouts:
-- sentinel_onboarding: Timeout values for Sentinel operations
-- data_collection_rule: Timeout values for DCR operations
-
-User Assigned Managed Identities:
-- ama: Azure Monitor Agent identity configuration
-DESCRIPTION
+variable "enable_telemetry" {
+  type        = bool
+  default     = true
+  description = "This variable controls whether or not telemetry is enabled..."
+  nullable    = false
 }
 ```
 
 **何してる？**
 
-`management_resource_settings`という複雑なオブジェクト型を定義してる。
+受け取った設定値を公式モジュールに渡すための変数定義。実際にプロジェクトで使うのは以下の7つの設定だけで十分：
 
-**主要なフィールド**：
+- `location`：リソースのデプロイ先リージョン（必須）
+- `log_analytics_workspace_name`：Log Analyticsワークスペース名（省略時は自動生成）
+- `resource_group_name`：リソースグループ名（省略時は自動生成）
+- `data_collection_rules`：3種類のデータ収集ルール設定
+- `user_assigned_managed_identities`：Azure Monitor Agent用のManaged Identity設定
 
-| カテゴリ | フィールド | 型 | デフォルト | 説明 |
-|---------|----------|-----|-----------|------|
-| **必須** | location | string | - | デプロイ先リージョン |
-| **リソース名** | automation_account_name | optional(string) | 自動生成 | Automation Account名 |
-| | log_analytics_workspace_name | optional(string) | 自動生成 | Log Analytics Workspace名 |
-| | resource_group_name | optional(string) | 自動生成 | Resource Group名 |
-| **DCR** | change_tracking | object | enabled=true | ファイル/レジストリ変更追跡 |
-| | vm_insights | object | enabled=true | VMパフォーマンス監視 |
-| | defender_sql | object | enabled=true | SQL Server セキュリティ |
-| **Log Analytics** | retention_in_days | optional(number) | 30 | ログ保持期間（日） |
-| | daily_quota_gb | optional(number) | なし | 1日のログ取り込み上限 |
-| | sku | optional(string) | "PerGB2018" | 料金プラン |
-| | internet_ingestion_enabled | optional(bool) | true | インターネット経由の取り込み |
-| | local_authentication_enabled | optional(bool) | true | ローカル認証の有効化 |
-| **Sentinel** | sentinel_onboarding | object | null | Sentinelの有効化設定 |
-| **UAMI** | user_assigned_managed_identities.ama | object | - | Azure Monitor Agent用ID |
-| **タグ** | tags | optional(map(string)) | null | リソースタグ |
-| **タイムアウト** | timeouts | object | デフォルト | 作成/削除のタイムアウト |
+Log Analyticsの詳細設定（`log_analytics_workspace_*`）やSentinel設定は、省略してもデフォルト値で動作する。
+```
 
-**ポイント**：
-
-- **locationのみ必須**、他はoptional
-- **デフォルト値**：`optional(bool, true)`の形式で指定
-- **ネストしたオブジェクト**：DCRやSentinelは複雑な構造
 
 ### modules/management_resources/outputs.tf
 
 ```hcl title="modules/management_resources/outputs.tf"
 output "management_resources" {
-  description = "The management resources outputs."
   value       = module.management_resources
 }
 ```
