Copilot instructionsとChapter 9の軽微な修正

--- a/docs-site/docs/09_管理リソース.md
+++ b/docs-site/docs/09_管理リソース.md
@@ -1488,6 +1488,8 @@ outputs.tf（アウトプット）
 
 ## Part 5: 実践パターン
 
+tfvars(設定ファイル)を変更してカスタマイズできます。
+
 ### パターン1: ログ保持期間の変更
 
 ```hcl title="90日保管に変更"
@@ -1641,7 +1643,7 @@ management_resource_settings = {
 
 **重要なポイント**：
 
-- **変数置換システム**を使って環境ごとの値を管理
+- 変数置換システムを使って環境ごとの値を管理
 - `$${starter_location_01}`のような多段階置換が可能
 - Log Analyticsは監視の基盤（すべてのログがここに集まる）
 - DCRで収集ルールをカスタマイズ（3種類：Change Tracking、VM Insights、Defender for SQL）
