docs: ドキュメント構成を更新し、実践編を追加
- mkdocs.yml: ナビゲーションを実際のファイル構成に合わせて更新
- index.md: 学習の進め方を6レベルから5レベルに再編成
  - レベル1: 基礎固め (00-01)
  - レベル2: 実践編追加 (02-04)
  - レベル3: 設定編 (05-08)
  - レベル4: モジュール編 (09-13)
  - レベル5: GitHub Actions編 (14-15)
- 章番号を現在のファイル構成に合わせて修正
- 存在しないVirtual WAN章と運用マスター章を削除
- Bastion Host SKU設定をBasicに変更 (Japan Eastリージョン対応)

--- a/docs-site/docs/00_はじめに.md
+++ b/docs-site/docs/00_はじめに.md
@@ -1,44 +1,10 @@
 # 00. はじめに - ランディングゾーンの全体像
 
-## この教科書の使い方
-
-### 📚 学習スタイル
-
-この教科書は、実際のコードを見ながら読むこと想定しています。
-
-!!! tip "推奨: GitHubで見る"
-    教科書を読みながら、ブラウザで https://github.com/shuhei0720org01/alz-mgmt を開いておきましょう。
-    
-    - ファイル構造が見える
-    - コードを検索できる
-    - ファイルをクリックすれば開ける
-
-こんな感じ↓
-
-![GitHubとドキュメントを並べて見る](img/スクリーンショット1.png)
-
-### 📖 読み方
-
-**1. 教科書を読む**
-
-- Webサイトまたは`docs/`フォルダのマークダウン
-
-**2. コードを確認する**
-
-- 教科書で具体的なファイル名（`platform-landing-zone.auto.tfvars`など）が出てきたら、GitHubまたはVSCodeでそのファイルを開く
-
-**3. コードを理解する**
-
-- コードの構造や設定値を確認する
-- コメントを読んで設計意図を理解する
-- 他のファイルとの関係性を把握する
-
----
 
 ## 何を作るのか？
 
-このプロジェクトは、**Azure Landing Zones**（アジュール・ランディングゾーンズ）という、  
-企業向けのAzure環境を構築するためのTerraformコードです。
+この教科書では、**Azure Landing Zones**（アジュール・ランディングゾーンズ）という、  
+企業向けのAzure環境を構築するためのTerraformコードを作っていきます。
 
 「Landing Zone」は飛行機の着陸帯って意味です。
 実際にイメージを照らし合わせ当て見ましょう。
@@ -131,81 +97,11 @@ Public IPを直接インターネットに晒して攻撃される。
 
 Landing Zonesは、これら全ての問題を一気に解決するための「基盤」なんです。
 
-## このプロジェクトの構成
 
-```
-alz-mgmt/
-├── platform-landing-zone.auto.tfvars  ← ここだけ編集すればOK
-├── variables.tf                        ← 変数の定義
-├── locals.tf                           ← 計算済みの値
-├── terraform.tf                        ← Terraformの設定
-├── main.*.tf                           ← メインの処理（複数ファイル）
-│
-├── modules/                            ← 再利用可能な部品
-│   ├── config-templating/              ← 設定の変換エンジン
-│   ├── management_groups/              ← 管理グループ・ポリシー
-│   └── management_resources/           ← 監視・管理リソース
-│
-├── lib/                                ← ポリシー定義のYAML
-│   ├── archetype_definitions/          ← 管理グループの種類
-│   └── architecture_definitions/       ← 全体のアーキテクチャ
-│
-└── .github/workflows/                  ← GitHub Actions（自動実行）
-```
-
-### ファイル名の法則
-
-このプロジェクト、ファイル名が規則的です：
-
-**`main.*.tf`: メインの処理**（`*`の部分が役割を表す）
-
-- `main.connectivity.hub.and.spoke.virtual.network.tf` → ハブスポークネットワーク
-- `main.management.tf` → 管理グループ
-- `main.resource.groups.tf` → リソースグループ
-
-**`variables.*.tf`: 変数定義**（`*`の部分が対象を表す）
-
-- `variables.connectivity.tf` → ネットワーク関連の変数
-- `variables.management.tf` → 管理関連の変数
-
-**`*.auto.tfvars`: 自動で読み込まれる設定ファイル**
-
-## データの流れ
-
-このプロジェクトがどう動くか、データの流れで見てみましょう：
-
-```
-1. あなたが設定ファイルを編集
-   ↓
-   platform-landing-zone.auto.tfvars
-   「東日本と西日本で作って！」
-
-2. Terraformが読み込む
-   ↓
-   terraform.tf, variables.tf
-   「OK、変数として受け取ったよ」
-
-3. テンプレートエンジンが変換
-   ↓
-   modules/config-templating
-   「$${starter_location_01}を'japaneast'に置換」
-
-4. 各モジュールが実行される
-   ↓
-   main.*.tf
-   「リソースグループ作成！」
-   「ネットワーク構築！」
-   「ポリシー適用！」
-
-5. Azureにリソースが作られる
-   ↓
-   Azure環境
-   「完成！」
-```
 
 ## 実際に何が作られるか
 
-このコードを実行すると、Azureにこれだけのリソースができます：
+ランディングゾーンのterraformでは、Azureにこれだけのリソースができます：
 
 - リソースグループ: 約10個
 - 仮想ネットワーク: 2個（東日本・西日本）
@@ -224,56 +120,8 @@ alz-mgmt/
 合計で、500個以上のリソースが作られます。  
 これを手作業でやったら...考えたくないですねw
 
-## 所要時間とコスト
 
-### 構築時間
-- 初回実行: 約60分
-- 削除: 約60分
 
-### 月額コスト（概算）
-
-**2リージョン構成（東日本+西日本）の場合：**
-- Azure Firewall: 約¥340,000/月（2個 × ¥170,000、Standard SKU）
-- VPN Gateway: 約¥80,000/月（2個 × ¥40,000、VpnGw1 SKU）
-- Bastion: 約¥54,000/月（2個 × ¥27,000、Basic SKU）
-- Log Analytics: データ量による（約¥10,000〜）
-- その他: 約¥5,000/月
-
-=== "2リージョン構成"
-    **合計: 約¥484,000〜/月**
-
-=== "1リージョン構成"
-    **約¥242,000/月**（2リージョンの半分）
-
-!!! tip "コスト削減のヒント"
-    - VPN不要なら約¥80,000削減
-    - Firewall Basicにすると約¥280,000削減（Standard → Basic）
-    - 詳細は各章のトラブルシューティングセクションを参照
-    
-    ※ 実験用なら不要なリソース（Firewall等）を無効化すれば大幅にコスト削減可能
-
-## このプロジェクトの賢いところ
-
-!!! success "5つの賢い設計"
-    ### 1. テンプレート機能
-    同じ設定を複数地域にコピペしなくていい。  
-    `$${starter_location_01}`って書けば自動で`japaneast`に置換してくれる。
-
-    ### 2. モジュール化
-    再利用可能な部品に分かれている。  
-    他のプロジェクトでも使い回せる。
-
-    ### 3. Azure Verified Modules (AVM)を使用
-    Microsoftが公式にメンテナンスしているモジュールを使ってる。  
-    自分でイチから書くより安全で確実。
-
-    ### 4. ポリシーのYAML管理
-    ポリシー定義をYAMLで管理。  
-    Terraformコードより読みやすい。
-
-    ### 5. GitHub Actionsで自動化
-    手元でTerraform実行しなくていい。  
-    GitHubにpushすれば自動でデプロイ。
 
 ## 学習のロードマップ
 
@@ -290,21 +138,19 @@ alz-mgmt/
     - Azureの基本概念
     - Landing Zonesの設計思想
 
-    ### ステップ3: 設定ファイルを読む
-    - `platform-landing-zone.auto.tfvars`を1行ずつ理解
-    - どのパラメータが何を制御するか
+    ### ステップ3: まずはやってみる
+    - 公式CAFのランディングゾーンアーキテクチャをデプロイ
+    - Azureポータルでデプロイ確認
+    - カスタマイズして理解を深める
 
-    ### ステップ4: モジュールを理解する
-    - 各モジュールの役割
-    - どう連携しているか
+    ### ステップ4: 運用を理解する
+    - terraformの運用を理解
+    - 運用をやってみる
 
-    ### ステップ5: 実際に動かす
-    - 自分の環境で実行
-    - トラブルシューティング
+    ### ステップ5: コードの理解
+    - コードにディープダイブして深く理解してみる。
+    - さらにカスタマイズしてみる。
 
-    ### ステップ6: カスタマイズする
-    - 自分の要件に合わせて改造
-    - 新しい機能を追加
 
 ## よくある勘違い
 
@@ -320,7 +166,7 @@ alz-mgmt/
     → **NO!** Terraformなので、設定変えて再実行すれば更新されます。
 
     ### 勘違い4: 「本番環境で使っちゃダメ」
-    → **NO!** Microsoftが推奨する構成なので本番でも使えます。  
+    → **NO!** Microsoftが推奨する構成なので本番でも使えます。むしろCAFで推奨されています。
     ただし、最初は検証環境で試してね。
 
 ---
