--- a/docs-site/docs/01_基礎知識.md
+++ b/docs-site/docs/01_基礎知識.md
@@ -403,15 +403,14 @@ ABC株式会社
 ```
 
 **このプロジェクトでは：**
+
 - 1つのAzure ADテナント
 - サブスクリプションIDを変数で管理
 - 複数サブスクリプションに対応可能
 
-**よくある質問：**
+**ベストプラクティス**
 
-- Q: 複数テナント作れる？
-
-- A: 作れるけど、1社1テナントを強く推奨します。理由は後からテナントをまとめるのがすごく大変だからです。あと、entra ID P2のライセンスが二重でかかったり、DefenderやAzureポリシーのガバナンスが分かれちゃったり。
+- テナントは、1社1テナントを強く推奨します。理由は後からテナントをまとめるのがすごく大変だからです。あと、entra ID P2のライセンスが二重でかかったり、DefenderやAzureポリシーのガバナンスが分かれちゃったり。
 
 #### 2. Identity and Access Management（ID・アクセス管理）
 
@@ -439,17 +438,13 @@ ABC株式会社
 - パスワード認証: 禁止（証明書かManaged Identity使う）
 ```
 
-**このプロジェクトでは：**
-
-- 管理グループレベルでRBAC設定
-- Managed Identity推奨（パスワード不要）
-- ポリシーで危険な操作を制限
 
 **ベストプラクティス：**
 
-- 本番環境への手動操作は最小限に
+- PIMや条件付きアクセス、EntraID Protectionを使う
 - MFA（多要素認証）は必須
-- 定期的に権限を棚卸し
+- 定期的にアクセスレビューで権限を棚卸し
+- マネージドIDとRBACによる認証を使う
 
 #### 3. Resource Organization（リソースの整理）
 
@@ -494,14 +489,16 @@ Root Management Group
 - **Online**: インターネット公開（Firewall必須）
 - **Sandbox**: 実験用（コスト制限、自動削除）
 
-**3. サブスクリプションで予算管理**
+**ベストプラクティス**
 
-- 1サブスクリプション = 1請求単位
-- 「今月このアプリいくら使った？」が見える
+- 本番、開発などで管理グループを分けないのが推奨構成です。理由は管理グループの階層が深層化し管理が複雑になる上に、本番と開発でガバナンスを分ける効果が薄いため。
+- CAFではサブスクリプションごとに環境を分けるのが推奨です。Microsoftの環境もこうなっているようです。
+
+※サンドボックスは別管理グループに分けます。
+
+
 
 **命名規則の例：**
-
-
 
 ```
 リソースグループ:
@@ -555,20 +552,18 @@ Firewallで一元管理
 | 接続方法 | 速度 | コスト | 特徴 |
 |---------|------|--------|------|
 | VPN Gateway | 最大1.25Gbps | ¥40,000/月 | インターネット経由、導入簡単 |
-| ExpressRoute | 10Gbps〜 | ¥50,000/月〜 | 専用線、安定、高額 |
+| ExpressRoute | 10Gbpsレベル | ¥50,000/月〜 | 専用線、安定、高額 |
 
-**このプロジェクトでは：**
+**ベストプラクティス**
 
-- Hub-Spoke型とVirtual WAN型の両方に対応
-- 東日本・西日本の2リージョン構成
-- Private DNSで名前解決
-- 全トラフィックをFirewallで検査
-
-**よくある失敗：**
-
-- IPアドレスが重複（オンプレと被った）
-- Firewall通さずに直接インターネット（危険！）
-- リージョン間通信を考えてない
+- ERはリージョン冗長で配置
+- HUBもリージョン冗長で配置。それに伴って、AzureFirewall、VPN Gatewayもリージョン冗長で配置することになる。
+- アウトバウンドやER向けの通信はAzureFirewallを通す
+- すべてのネットワークで、VNETフローログを有効化
+- DNSはHUBに集約し、プライベートエンドポイントのレコード登録を自動化
+- Azure Virtual Network Managerを使用して、NSGの禁止ルールを定義
+- OnlineランディングゾーンのSpokeは会社ネットワークに接続できないよう制限し、利用者が自由にネットワークを設計できるようにする
+- CorpランディングゾーンのSpokeは会社ネットワーク(HUB)に接続するため、ネットワーク設定を管理
 
 #### 5. Security（セキュリティ）
 
@@ -622,7 +617,7 @@ Firewallで一元管理
 
 - 「何も設定しない = 危険」ではなく、「デフォルトで安全」に
 - ポリシーで危険な設定を自動ブロック
-- 定期的に脆弱性診断
+- すべてのサブスクリプションでDefender for Cloudを有効化
 
 #### 6. Management（管理）
 
@@ -660,6 +655,10 @@ Log Analytics Workspace
 - 東日本リージョンにLog Analytics作成
 - Azure Monitor Agentで自動ログ収集
 - Automation Account（自動運用タスク用）
+
+**ベストプラクティス**
+
+- ログは単一のLog Analyticsワークスペースにすべて集約する。理由はSOCやインシデント対応の横断分析のため。
 
 **よくある運用シナリオ：**
 
@@ -798,171 +797,8 @@ Log Analytics Workspace
 | 7. ガバナンス | YAML Policy、タグ戦略 |
 | 8. 自動化 | GitHub Actions、Terraform |
 
-つまり、このコードを使えば、Microsoftが推奨する「ちゃんとした企業向けAzure環境」が自動で作れるということです。
+つまり、ランディングゾーンのコードを使えば、Microsoftが推奨する「ちゃんとした企業向けAzure環境」が自動で作れるということです。
 
-### アーキテクチャパターン：どっちを選ぶ？
-
-Azure Landing Zonesには、主に2つのネットワーク構成があります。
-
-#### パターン1: Hub-Spoke型（ハブ・スポーク）
-
-**図解：**
-
-```text title="Hub-Spoke型の構造"
-        Hub VNet（中央拠点）
-        10.0.0.0/16
-        ┌─────────────────┐
-        │ Firewall        │← インターネットへの出入口
-        │ Bastion         │← 安全なVM接続
-        │ VPN Gateway     │← オンプレミス接続
-        │ Private DNS     │← 名前解決
-        └────────┬────────┘
-                 │ VNet Peering
-         ┌───────┼───────┐
-         │       │       │
-      Spoke1  Spoke2  Spoke3
-      10.1.x.x 10.2.x.x 10.3.x.x
-      │       │       │
-    WebApp  API    Database
-```
-
-**通信の流れ：**
-
-```text title="Hub-Spoke通信パターン"
-例1: VMからインターネットへのアクセス
-
-Spoke1（VM）
-  ↓
-Hub VNetのFirewall ← ここで検査
-  ↓
-インターネット
-
-例2: Spoke1からSpoke2への通信
-
-Spoke1（WebApp）
-  ↓
-Hub VNetのFirewall ← 必ずHub経由
-  ↓
-Spoke2（API）
-```
-
-**メリット：**
-
-- シンプルで理解しやすい
-- コストが比較的安い
-- 小〜中規模に最適
-
-**デメリット：**
-
-- リージョンまたぎが面倒
-- Spoke間通信が必ずHub経由（遅延増える）
-- グローバル展開には向かない
-
-**こんな会社に向いてる：**
-
-- 日本国内だけで展開
-- 支社が30以下
-- 予算が限られている
-
-#### パターン2: Virtual WAN型
-
-**図解：**
-
-```text title="Virtual WAN型の構造"
-         Virtual WAN（グローバル）
-              │
-    ┌─────────┼─────────┐
-    │         │         │
-  vHub1     vHub2     vHub3
- 東日本     西日本     米国
-10.0.0.0/16 10.1.0.0/16 10.2.0.0/16
-    │         │         │
- ┌──┼──┐   ┌──┼──┐   ┌──┼──┐
-Spoke Spoke Spoke Spoke Spoke Spoke
-```
-
-**通信の流れ：**
-
-```text title="Virtual WAN通信パターン"
-例: 東日本のアプリから米国のDBにアクセス
-
-東日本のSpoke
-  ↓
-vHub1（東日本）
-  ↓ Virtual WANバックボーン（高速・低遅延）
-vHub3（米国）
-  ↓
-米国のSpoke（DB）
-
-※ Hub-Spoke型より設定が簡単で速い！
-```
-
-**メリット：**
-
-- グローバル展開が簡単
-- リージョン間通信が高速
-- 設定がシンプル（Azureが自動で最適化）
-- 拠点が増えても管理が楽
-
-**デメリット：**
-
-- コストが高い（Virtual WAN自体の料金）
-- 小規模には過剰
-
-**こんな会社に向いてる：**
-
-- 世界中に拠点がある
-- 支店が多い（30以上）
-- 高速な通信が必要
-
-#### このプロジェクトでは両方使える！
-
-```hcl title="構成切り替え"
-# Hub-Spoke型を使う場合
-connectivity_type = "hub_and_spoke_vnet"
-
-# Virtual WAN型を使う場合
-connectivity_type = "virtual_wan"
-```
-
-変数1つ変えるだけで切り替え可能です。
-
-#### どっちを選べばいい？
-
-```text title="選択肢の決定木"
-質問に答えてください：
-
-Q1: 海外にも展開する予定がある？
-  Yes → Virtual WAN推奨
-  No  → Q2へ
-
-Q2: 支社は30個以上ある？
-  Yes → Virtual WAN推奨
-  No  → Q3へ
-
-Q3: 予算は潤沢にある？
-  Yes → Virtual WAN でもOK
-  No  → Hub-Spoke推奨
-
-【結論】
-- 小規模・国内のみ → Hub-Spoke
-- 大規模・グローバル → Virtual WAN
-- 迷ったら → Hub-Spokeで始めて、後で移行
-```
-
-#### 実際の企業例
-
-**Hub-Spoke型を選んだ企業：**
-
-- スタートアップ（国内向けSaaS）
-- 中小企業（社内システムのみ）
-- 予算重視のプロジェクト
-
-**Virtual WAN型を選んだ企業：**
-
-- グローバル企業（世界10拠点以上）
-- 大規模SaaS（複数リージョンで展開）
-- M&Aで増えた拠点の統合
 
 ---
 
@@ -1145,7 +981,6 @@ Terraformの状態ファイル（terraform.tfstate）をどこに保存するか
 ### Landing Zones
 - 企業向けのベストプラクティス
 - 8つの設計領域
-- Hub-Spoke型 or Virtual WAN型
 
 ### IaC
 - 再現性・バージョン管理・レビューが可能
@@ -1168,7 +1003,7 @@ Azureで「管理グループ」の役割は何ですか？
 IaCの最大のメリットを1つ挙げてください。
 
 ### 問題4
-このプロジェクトで使っているプロバイダーを3つ挙げてください。
+このプロジェクトで使っているterraformのプロバイダーを3つ挙げてください。
 
 ---
 
@@ -1184,7 +1019,7 @@ IaCの最大のメリットを1つ挙げてください。
 IaCの最大のメリットは「再現性」です。同じコードから何度でも同じ環境を作れるため、手作業のミスがなくなり、環境の差異も発生しません。
 
 ### 答え4
-このプロジェクトで使っているプロバイダーは：
+このプロジェクトで使っているterraformのプロバイダーは：
 
 1. **alz** (Azure Landing Zones専用プロバイダー)
 2. **azurerm** (Azureリソース管理)
@@ -1280,7 +1115,7 @@ vim terraform.tfstate  # 壊れる！
 ## 次のステップ
 
 基礎知識は終わり！  
-次は[02_プロジェクト構造.md](./02_プロジェクト構造.md)で、  
+次は[02_IaCのランディングゾーン環境を作ってみよう.md](./02_IaCのランディングゾーン環境を作ってみよう.md)で、  
 このリポジトリのファイル構成を詳しく見ていきます。
 
 ---
@@ -1288,4 +1123,4 @@ vim terraform.tfstate  # 壊れる！
 **所要時間**: 30分  
 **難易度**: ★★☆☆☆  
 **前**: [00_はじめに.md](./00_はじめに.md)  
-**次**: [02_プロジェクト構造.md](./02_プロジェクト構造.md)
+**次**: [02_IaCのランディングゾーン環境を作ってみよう.md](./02_IaCのランディングゾーン環境を作ってみよう.md)
