--- a/docs-site/docs/05_プロジェクト構造.md
+++ b/docs-site/docs/05_プロジェクト構造.md
@@ -1,9 +1,8 @@
-# 02. プロジェクト構造 - ファイルとフォルダの全体像
+# 05. プロジェクト構造 - ファイルとフォルダの全体像
 
 !!! info "この章で学ぶこと"
-    このリポジトリ（完成済みのコード例）のファイル構成を理解します。
+    実践編で作成したランディングゾーンのファイル構成を理解します。
     
-    **注意**: このリポジトリは学習用の完成済みコード例です。実際にAzure Landing Zonesをデプロイする場合は、Chapter 14-15のAzure公式Bootstrap手順に従って、新しいリポジトリが自動作成されます。そのリポジトリがこのような構造になります。
 
 ## ファイル構成の鳥瞰図
 
@@ -53,20 +52,9 @@ alz-mgmt/
 │       └── workflows/
 │           └── cd.yaml                    ← GitHub Actions設定
 │
-└── 📖 ドキュメント
-    ├── README.md                          ← 説明書
-    └── docs/                              ← このフォルダ（教科書）
+
 ```
 
-## ファイル数
-
-全体で：
-
-- Terraformファイル: 約20個
-- モジュール内ファイル: 約10個
-- YAMLファイル: 約10個
-
-一見多そうですが、実は整理されています。
 
 **📊 ファイル構成の関係図**
 
@@ -1218,14 +1206,11 @@ for_eachのほうが、リソースの追加・削除時に他のリソースに
 
 プロジェクト構造は理解できましたか？
 
-次は[03_設定ファイル完全解説.md](./03_設定ファイル完全解説.md)で、  
-`platform-landing-zone.auto.tfvars`を1行ずつ解読していきます。
-
-これが一番重要な章です。じっくり読んでください。
+次は[03_IaCのランディングゾーン環境を作ってみよう.md](./03_IaCのランディングゾーン環境を作ってみよう.md)で、ランディングゾーンを作っていきます。楽しんでいきましょう！
 
 ---
 
 **所要時間**: 40分  
 **難易度**: ★★★☆☆  
-**前**: [01_基礎知識.md](./01_基礎知識.md)  
-**次**: [03_設定ファイル完全解説.md](./03_設定ファイル完全解説.md)
+**前**: [04_IaCランディングゾーンの運用管理.md](./04_IaCランディングゾーンの運用管理.md)  
+**次**: [06_設定ファイル完全解説.md](./06_設定ファイル完全解説.md)
