--- a/docs-site/docs/06_設定ファイル完全解説.md
+++ b/docs-site/docs/06_設定ファイル完全解説.md
@@ -1,4 +1,4 @@
-# 03. 設定ファイル完全解説 - platform-landing-zone.auto.tfvars
+# 06. 設定ファイル完全解説 - platform-landing-zone.auto.tfvars
 
 !!! info "この章で学ぶこと"
     `platform-landing-zone.auto.tfvars`を完全解説します：
@@ -1292,5 +1292,5 @@ rg-management-japaneast
 
 **所要時間**: 60分  
 **難易度**: ★★★★★  
-**前**: [02_プロジェクト構造.md](./02_プロジェクト構造.md)  
-**次**: [04_変数定義.md](./04_変数定義.md)
+**前**: [06_設定ファイル完全解説.md](./06_設定ファイル完全解説.md)  
+**次**: [07_変数定義.md](./07_変数定義.md)
