docs: 04章と05章の内容を更新

--- a/docs-site/docs/05_プロジェクト構造.md
+++ b/docs-site/docs/05_プロジェクト構造.md
@@ -4,6 +4,15 @@
     実践編で作成したランディングゾーンのファイル構成を理解します。
     
 
+この章以降で、実践編で作ったランディングゾーンの詳細を解明していきます。
+複雑なだけあって、理解するところが多いですがこれを理解すれば、様々な技術の面で勉強になります。
+ぜひ理解していってください。
+
+※ここからは実践編で作成したリポジトリを開きながら見ていきましょう。
+
+　こんな感じ↓
+(img)[./img/スクリーンショット1.png]
+
 ## ファイル構成の鳥瞰図
 
 まず、全体のファイル構成を見てみましょう：
@@ -134,6 +143,7 @@ lib/architecture_definitions/        階層定義
 ## Part 1: 設定ファイルたち
 
 ここからは実際に設定ファイルを手元で開いてみてね！
+
 
 ### platform-landing-zone.auto.tfvars
 
@@ -1206,7 +1216,7 @@ for_eachのほうが、リソースの追加・削除時に他のリソースに
 
 プロジェクト構造は理解できましたか？
 
-次は[03_IaCのランディングゾーン環境を作ってみよう.md](./03_IaCのランディングゾーン環境を作ってみよう.md)で、ランディングゾーンを作っていきます。楽しんでいきましょう！
+次は[06_設定ファイル完全解説.md](./06_設定ファイル完全解説.md)で、設定ファイルの詳細にディープダイブしていきましょう。
 
 ---
 
