Refactor code structure for improved readability and maintainability

--- a/docs-site/docs/05_プロジェクト構造.md
+++ b/docs-site/docs/05_プロジェクト構造.md
@@ -13,6 +13,8 @@
 　こんな感じ↓
 ![img](./img/スクリーンショット1.png)
 
+---
+
 ## ファイル構成の鳥瞰図
 
 まず、全体のファイル構成を見てみましょう：
@@ -142,7 +144,7 @@ lib/architecture_definitions/        階層定義
 
 ## Part 1: 設定ファイルたち
 
-ここからは実際に設定ファイルを手元で開いてみてね！
+ここからは実際に設定ファイルを手元で開いてみください！
 
 
 ### platform-landing-zone.auto.tfvars
@@ -204,6 +206,8 @@ custom_replacements = {
 - `.auto.tfvars`は自動で読み込まれる
 - 楽だから`.auto`をつけてる
 
+---
+
 ### terraform.tfvars.json
 
 **役割**: サブスクリプションIDや各種設定  
@@ -253,6 +257,8 @@ custom_replacements = {
 10. `subscription_ids`: **新形式のサブスクリプションID指定（map形式）** ← これを使う
 11. `virtual_hubs`: Virtual WAN使用時のHub設定（通常は空）
 12. `virtual_wan_settings`: Virtual WAN使用時の設定（通常は空）
+
+---
 
 ### terraform.tf
 
@@ -343,6 +349,8 @@ variable "location" {
 ```
 
 このファイルで「どんな変数を受け取るか」を定義します。
+
+---
 
 ### variables.tf（メイン変数）
 
@@ -455,6 +463,8 @@ names = optional(map(string), {})
 - 第2引数の`{}`はデフォルト値（省略時は空マップ）
 - Terraform 1.3以降の機能
 
+---
+
 ### variables.connectivity.tf（ネットワーク変数）
 
 **役割**: ネットワーク関連の変数定義  
@@ -509,6 +519,8 @@ variable "connectivity_tags" {
 
 - 役割ごとに分けた方が見やすい
 - ネットワーク担当者は`variables.connectivity.tf`だけ見ればいい
+
+---
 
 ### variables.moved.tf（後方互換用）
 
@@ -663,6 +675,8 @@ DRY原則（Don't Repeat Yourself）ですね。
 実は順番は関係ない！  
 Terraformが依存関係を解析して、自動で順序を決めてくれます。
 
+---
+
 ### main.config.tf
 
 **役割**: 設定のテンプレート処理  
@@ -720,6 +734,8 @@ inputs = {
 複数の設定を1つのオブジェクトにまとめてモジュールに渡す。  
 モジュール内でテンプレート変数の展開処理を行います。
 
+---
+
 ### main.resource.groups.tf
 
 **役割**: リソースグループを作る  
@@ -768,6 +784,8 @@ tags = try(each.value.tags, null) == null ? module.config.outputs.tags : each.va
 
 - リソースグループ固有のタグがあればそれを使う
 - なければデフォルトのタグを使う
+
+---
 
 ### main.management.tf
 
@@ -830,6 +848,8 @@ moved {
 このモジュールで200個以上のポリシーが作られます。  
 詳しくは後の章で。
 
+---
+
 ### main.connectivity.hub.and.spoke.virtual.network.tf
 
 **役割**: Hub-Spoke型ネットワークを作る  
@@ -867,6 +887,8 @@ tags = coalesce(module.config.outputs.connectivity_tags, module.config.outputs.t
 - `connectivity_tags`があればそれを使う
 - なければデフォルトの`tags`を使う
 - coalesce = 最初のnullでない値を返す
+
+---
 
 ### main.connectivity.virtual.wan.tf
 
@@ -968,6 +990,8 @@ modules/config-templating/
 
 詳しくは[06_設定テンプレート.md](./06_設定テンプレート.md)で。
 
+---
+
 ### modules/management_groups/
 
 **役割**: 管理グループとポリシーを作る
@@ -982,6 +1006,8 @@ modules/management_groups/
 
 実際は`main.tf`が`Azure/avm-ptn-alz/azurerm`モジュールを呼んでるだけ。  
 ラッパーモジュール。(ラッパーは囲うやつみたいな感じかな。サランラップがイメージしやすい)
+
+---
 
 ### modules/management_resources/
 
@@ -1126,6 +1152,8 @@ jobs:
 | `lib/` | ポリシー定義 | △ |
 | `.github/` | CI/CD | ❌ |
 
+---
+
 ### データの流れ（再掲）
 
 ```text title="全体のフロー"
@@ -1145,6 +1173,8 @@ Azure（リソース作成）
   ↓
 outputs.tf（結果出力）
 ```
+
+---
 
 ### 重要度ランキング
 
