--- a/docs-site/docs/07_変数定義.md
+++ b/docs-site/docs/07_変数定義.md
@@ -61,6 +61,8 @@ variable "starter_locations" {
 
 「これは文字列のリストです」と宣言しています。
 
+---
+
 ### 2. バリデーション
 ```hcl title="値のチェック"
 validation {
@@ -68,6 +70,9 @@ validation {
   error_message = "最低1つのリージョンが必要です"
 }
 ```
+
+---
+
 
 間違った値が入ってたらエラーを出す。
 
@@ -177,6 +182,8 @@ hub_virtual_networks = {
   secondary = { ... }  # Hub 2個 → 足りない！
 }
 ```
+
+---
 
 ### starter_locations_short
 
@@ -292,6 +299,8 @@ subscription_ids = {
 # エラー: The keys of the subscription_ids map must be one of 'management', 'connectivity', 'identity' or 'security'
 ```
 
+---
+
 ### subscription_id_connectivity（古い方式）
 
 ```hcl title="非推奨：古いサブスクリプションID設定"
@@ -391,6 +400,8 @@ enable_telemetry = false
 
 個人情報は送られないから、trueのままでいいと思う。
 
+---
+
 ### custom_replacements
 
 ```hcl title="カスタム置換変数"
@@ -446,7 +457,9 @@ custom_replacements = {
 }
 ```
 
-Chapter 3で見た設定が、ここで定義されてるわけ。
+Chapter 6で見た設定が、ここで定義されてる。
+
+---
 
 ### tags
 
@@ -509,6 +522,8 @@ variable "enabled" {
 enabled = true
 ```
 
+---
+
 ### コレクション型（複数の値）
 
 #### list（リスト）
@@ -543,6 +558,8 @@ variable "unique_items" {
 # 使い方
 unique_items = ["a", "b", "c"]  # 重複は自動削除される
 ```
+
+---
 
 ### 構造型（複雑な構造）
 
@@ -604,6 +621,8 @@ variable "example" {
 ```
 
 **conditionがfalseになったらエラー**
+
+---
 
 ### よく使うパターン
 
@@ -667,10 +686,14 @@ variable "custom_firewall_name" {
 }
 ```
 
+---
+
 ### 2. platform-landing-zone.auto.tfvarsで使う
 ```hcl title="カスタムFirewall名の設定"
 custom_firewall_name = "fw-my-custom-firewall"
 ```
+
+---
 
 ### 3. main.tfで参照
 ```hcl title="Firewallリソースで変数を使用"
@@ -705,6 +728,8 @@ resource "azurerm_firewall" "example" {
 
 次のChapterでは、`locals.tf`を見ていきます。
 変数を計算・加工するロジックがどうなっているか解説します。
+
+---
 
 ## 練習問題
 
